// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

(require('./foo'): string);

=====================================output=====================================
// @flow

(require("./foo"): string);

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

module.exports = 0;

=====================================output=====================================
// @flow

module.exports = 0;

================================================================================
`;
